# seatpredictor

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json
.claude/skills/add-local-election/: SKILL.md
.claude/skills/notebook/: SKILL.md
.claude/skills/predict/: SKILL.md
.claude/skills/snapshot/: SKILL.md
data/derived/: reform_polling_bias.json
data/hand_curated/: by_elections.yaml  local_elections.yaml
data_engine/: cli.py  raw_cache.py  snapshot.py  sqlite_io.py
data_engine/sources/: byelections.py  hoc_results.py  local_elections.py  wikipedia_polls.py
data_engine/transforms/: transfer_matrix.py
docs/superpowers/plans/: 2026-04-25-plan-a-data-engine.md  2026-04-25-plan-b-prediction-engine.md  2026-04-26-reform-polling-bias-correction.md
docs/superpowers/specs/: 2026-04-25-seat-predictor-design.md  (+2 more)
notebooks/: 01_polling_trends.ipynb  02_constituency_drilldown.ipynb  03_strategy_comparison.ipynb  04_scenario_sweep.ipynb  05_reform_polling_bias.ipynb
prediction_engine/: cli.py  cli_analyze.py  polls.py  projection.py  runner.py  snapshot_loader.py  sqlite_io.py
prediction_engine/analysis/: drilldown.py  flips.py  poll_bias.py  poll_trends.py  sweep.py
prediction_engine/strategies/: __init__.py  base.py  reform_threat_consolidation.py  uniform_swing.py
schema/: __init__.py  byelection.py  common.py  constituency.py  poll.py  prediction.py  snapshot.py  transfer_weights.py
scripts/: build_notebooks.py  smoke_verify.py
tests/: conftest.py
tests/data_engine/: test_byelections.py  test_cli.py  test_hoc_results.py  test_local_elections.py  test_raw_cache.py  test_snapshot_orchestrator.py  test_sqlite_io.py  test_transfer_matrix.py  test_wikipedia_polls.py
tests/fixtures/: hoc_results_sample.csv  local_elections_sample.yaml  tiny_snapshot_seed.yaml  wikipedia_polls_sample.html
tests/prediction_engine/: conftest.py  test_analysis_drilldown.py  test_analysis_flips.py  test_analysis_poll_trends.py  test_analysis_sweep.py  test_cli.py  test_cli_analyze.py  test_fixture_sanity.py  test_poll_bias.py  test_polls.py  test_projection.py  test_reform_threat.py  test_runner.py  test_snapshot_loader.py  test_sqlite_io.py  test_strategy_base.py  test_uniform_swing.py
tests/schema/: test_byelection.py  test_common.py  test_constituency.py  test_poll.py  test_prediction.py  test_snapshot.py  test_transfer_weights.py
